--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,14 @@
   <body>
     <!-- <div id="app"></div> -->
 
-    <form id="animalForm">
+    <form id="form">
       <p>animal:</p>
       <input type="text" name="animal">
       <p>like:</p>
       <input type="checkbox" name="likes">
       <p>comment:</p>
       <input type="text" name="comment">
+      <button type="submit">Submit</button>
     </form>
 
     <script type="module" src="/src/main.js"></script>
