--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,18 +7,18 @@
     <title>client</title>
   </head>
   <body>
-    <!-- <div id="app"></div> -->
+    
 
     <form id="form">
       <p>animal:</p>
-      <input type="text" name="animal">
+      <input type="text" name="animal_name">
       <p>like:</p>
-      <input type="checkbox" name="likes">
+      <input type="text" name="likes">
       <p>comment:</p>
       <input type="text" name="comment">
       <button type="submit">Submit</button>
     </form>
-
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
