change into a guestbook

--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,9 @@
 
     <form id="form">
       <p>animal:</p>
-      <input type="text" name="animal_name">
+      <input type="text" name="guest_name">
       <p>like:</p>
-      <input type="text" name="likes">
+      <input type="text" name="length_of_stay">
       <p>comment:</p>
       <input type="text" name="comment">
       <button type="submit">Submit</button>
