update labels of fields for user

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,9 @@
     
 
     <form id="form">
-      <p>animal:</p>
+      <p>guest name:</p>
       <input type="text" name="guest_name">
-      <p>like:</p>
+      <p>length of stay:</p>
       <input type="text" name="length_of_stay">
       <p>comment:</p>
       <input type="text" name="comment">
